tests/ui/type-alias-impl-trait/nested-in-anon-const.stderr
error[E0308]: mismatched types
  --> $DIR/nested-in-anon-const.rs:12:17
   |
LL | /                 {
LL | |                     type B<Z> = impl Sized;
LL | |
LL | |                 },
   | |_________________^ expected `usize`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
